# alphaforge

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  README.md  STATUS_REPORT.md  alembic.ini  build.py  build_launcher.spec  config.yaml  config.yaml.example  debug_out.txt  debug_parser.py  debug_parser_2.py  debug_parser_3.py  debug_results.txt  inspect_db.py  pyproject.toml  seed_dashboard.py  test_output.txt  tmp_inspect.py  tmp_inspect_sandbox.py
.agent/workflows/: during-task.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 039e129b7d08_make_rts_fields_nullable.py  249fe7ecbd3c_add_dashboard_indexes.py  3a9e0e5c07eb_setup_fts_index.py  596409483d0a_initial_schema.py  6ab6d15a99b8_add_phase_5_advanced_metrics_and_models.py  c3a829abb550_make_notes_and_attachments_nullable_add_.py
dashboard/: app.py  db_access.py  state_manager.py
dashboard/components/: banner.py  equity_chart.py  metrics_table.py  sidebar.py  status_badge.py
dashboard/pages/: 0_Inbox.py  1_Pipeline.py  2_Leaderboard.py  3_Strategy_Detail.py  4_Capture.py  4_Settings.py  5_Ingest_Run.py  5_Settings.py
data/: alphaforge.db
data/archive/: dark-pool-tracker_v1.rts  dark-pool-tracker_v2.rts  earnings-gap-hunter_v1.rts  earnings-gap-hunter_v2.rts  earnings-gap-hunter_v3.rts  gamma-squeeze-scout_v1.rts  institutional-flow_v1.rts  institutional-flow_v2.rts  mean-reversion-alpha_v1.rts  mean-reversion-alpha_v2.rts  mean-reversion-alpha_v3.rts  pairs-trading-engine_v1.rts  pairs-trading-engine_v2.rts  sector-rotation_v1.rts  sector-rotation_v2.rts  sector-rotation_v3.rts  sentiment-divergence_v1.rts  sentiment-divergence_v2.rts  trend-follower-pro_v1.rts  (+2 more)
docs/: PROGRESS.md  REALTEST_WORKFLOW.md  SCREENSHOT_GUIDE.md  SPEC.md
scripts/: migrate_sandbox.py
tests/: test_config.py  test_csv_parser.py  test_csv_parser_robust.py  test_custom_metrics.py  test_dashboard_smoke.py  test_database_directory_creation.py  test_detail_repository.py  test_duplicate_detection.py  test_equity_chart_logic.py  test_equity_parser.py  test_equity_parser_robust.py  test_ingestion_e2e.py  test_ingestion_edge_cases.py  test_models.py  test_report_copier.py  test_repository.py  test_rts_archiver.py  test_trade_log_filters.py
(+171 files in other folders)
