[project]
name = "alphaforge"
version = "0.1.0"
description = "Local-first dashboard for managing RealTest trading strategies."
authors = [{ name = "AlphaForge Team" }]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "pyarrow",
    "pandas",
    "streamlit",
    "typer>=0.9",
    "rich",
    "click",
]
requires-python = ">=3.11"

[project.scripts]
alphaforge = "alphaforge.ingestion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaforge"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
